[tool.poetry]
name = "pypolestar"
version = "1.4.0"
description = "Library to control Polestar"
authors = ["Tuen Lee <leeyuentuen@gmail.com>", "Jakob Schlyter <jakob@kirei.se>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/pypolestar/pypolestar"

[tool.poetry.scripts]
polestar = "pypolestar.cli:main"

[tool.poetry.dependencies]
python = "^3.11"
httpx = ">=0.27.2"
gql = {version = "^3.5.0", extras = ["httpx"]}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
ruff = "^0.9.3"
pytest-ruff = "^0.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
required-version = ">=0.6.8"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["E501","SIM108"]

[tool.ruff.lint.isort]
combine-as-imports = true
split-on-trailing-comma = false
